--- a/base-config.yaml
+++ b/base-config.yaml
@@ -56,7 +56,7 @@ system_prompt: |
     Answer concisely.
 
 # additional context to provide in the prompts.
-# keep in mind the max number of context messages is 10 across all rooms,
+# keep in mind this counts towards max_context_messages,
 # so leave room here to include previous questions and context.
 # refer to documentation about zero-shot, one-shot, and few-shot prompts.
 # leave this an empty list to skip it altogether.
