--- a/base-config.yaml
+++ b/base-config.yaml
@@ -24,8 +24,9 @@ max_context_messages: 20
 # while lower values like 0.2 will make it more focused and deterministic
 temperature: 1
 
-# allowed users who can make calls to the openAI APIs. an empty list
-# means everyone is allowed.
+# list of allowed users who can make calls to the openAI APIs. an empty list
+# means everyone is allowed. you can use a regex to allow all users of a 
+# homeserver ('^@.*:homeserverdomain.tld$')
 allowed_users: []
 
 # your bot's name, for reference. leave blank to use mxid localpart
