--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,14 +1,14 @@
-gpt_api_key: somestring
+deepseek_api_key: sk-ac77a49a43964030834895d33665b278
 
 # api endpoint to connect to. you probably don't want to change this.
-api_endpoint: https://api.openai.com/v1/chat/completions
+api_endpoint: https://api.deepseek.com 
 
-model: gpt-3.5-turbo
+model: deepseek-chat
 
 # The maximum number of tokens to generate in the chat completion.
 # Leave blank to allow unlimited response length.
 # Note that is max_tokens + tokens in the input must be less than model's maximum context.
-max_tokens:
+max_tokens: 
 
 # The maximum number of words allowed to in the input.
 # This includes the system prompt, additional context, and previous messages.
@@ -22,13 +22,13 @@ max_context_messages: 20
 # What sampling temperature to use, between 0 and 2.
 # Higher values like 0.8 will make the output more random,
 # while lower values like 0.2 will make it more focused and deterministic
-temperature: 1
+temperature: 1.4
 
 # allowed users who can make calls to the openAI APIs. an empty list
 # means everyone is allowed. regex is supported, e.g. to allow anyone from
 # your homeserver, use '^@.*:myhomeserver.tld$'. always wrap everything in
 # single-quotes when you can, but don't worry if maubot removes them.
-allowed_users: []
+allowed_users: [ '@.*:communist.accountant' ]
 
 # your bot's name, for reference. leave blank to use mxid localpart
 # set this to a specific value if the bot's mxid localpart does not
@@ -36,7 +36,7 @@ allowed_users: []
 # message bodies when using tab-completion.
 # this is used as the trigger to get your bots attention in rooms with
 # more than one user in them
-name: ''
+name: 'РОБОТОВАРИЩ'
 
 # Reply to queries in a thread and keep context within that thread.
 reply_in_thread: True
@@ -60,17 +60,18 @@ system_prompt: |
     You are a friendly assistant named {name}. 
     The current datetime is {timestamp}, and this can be used reliably to 
     answer questions related to dates and times.
-    Answer concisely.
+    Answer concisely, and don't be overly friendly.
+    Please refer to everyone as "comrade" or "товарищ"
 
 # additional context to provide in the prompts.
 # keep in mind this counts towards max_context_messages,
 # so leave room here to include previous questions and context.
 # refer to documentation about zero-shot, one-shot, and few-shot prompts.
 # leave this an empty list to skip it altogether.
-addl_context: 
-  - role: user
-    content: What does TLA stand for?
-  - role: assistant
-    content: |
-        TLA stands for 'Three Letter Acronym'. It is a self-referrential joke
-        used at large agencies and companies where acronyms are abundant.
+# addl_context: s
+#   - role: user
+#     content: What does TLA stand for?
+#   - role: assistant
+#     content: |
+#         TLA stands for 'Three Letter Acronym'. It is a self-referrential joke
+#         used at large agencies and companies where acronyms are abundant.
