--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,4 +1,4 @@
-deepseek_api_key: sk-ac77a49a43964030834895d33665b278
+deepseek_api_key: insert api key
 
 # api endpoint to connect to. you probably don't want to change this.
 api_endpoint: https://api.deepseek.com 
@@ -22,13 +22,13 @@ max_context_messages: 20
 # What sampling temperature to use, between 0 and 2.
 # Higher values like 0.8 will make the output more random,
 # while lower values like 0.2 will make it more focused and deterministic
-temperature: 1.4
+temperature: 1
 
 # allowed users who can make calls to the openAI APIs. an empty list
 # means everyone is allowed. regex is supported, e.g. to allow anyone from
 # your homeserver, use '^@.*:myhomeserver.tld$'. always wrap everything in
 # single-quotes when you can, but don't worry if maubot removes them.
-allowed_users: [ '@.*:communist.accountant' ]
+allowed_users: []
 
 # your bot's name, for reference. leave blank to use mxid localpart
 # set this to a specific value if the bot's mxid localpart does not
@@ -36,7 +36,7 @@ allowed_users: [ '@.*:communist.accountant' ]
 # message bodies when using tab-completion.
 # this is used as the trigger to get your bots attention in rooms with
 # more than one user in them
-name: 'РОБОТОВАРИЩ'
+name: ''
 
 # Reply to queries in a thread and keep context within that thread.
 reply_in_thread: True
@@ -61,7 +61,6 @@ system_prompt: |
     The current datetime is {timestamp}, and this can be used reliably to 
     answer questions related to dates and times.
     Answer concisely, and don't be overly friendly.
-    Please refer to everyone as "comrade" or "товарищ"
 
 # additional context to provide in the prompts.
 # keep in mind this counts towards max_context_messages,
