--- a/base-config.yaml
+++ b/base-config.yaml
@@ -3,6 +3,7 @@ deepseek_api_key: insert api key
 # api endpoint to connect to. you probably don't want to change this.
 api_endpoint: https://api.deepseek.com/chat/completions
 
+# this can also be deepseek-code
 model: deepseek-chat
 
 # The maximum number of tokens to generate in the chat completion.
@@ -43,7 +44,7 @@ reply_in_thread: True
 
 # whether to allow a `!summarize` command to summarize the room messages.
 # this will use the room context instead of the thread context, even if reply_in_thread is true.
-allow_summarize: false
+allow_summarize: True
 # whether to allow the bot to be conversational. if false, the bot will only serve as a summary tool.
 allow_responses: true
 
@@ -60,7 +61,6 @@ system_prompt: |
     You are a friendly assistant named {name}. 
     The current datetime is {timestamp}, and this can be used reliably to 
     answer questions related to dates and times.
-    Answer concisely, and don't be overly friendly.
 
 # additional context to provide in the prompts.
 # keep in mind this counts towards max_context_messages,
